--- a/src/main/resources/de/whs/mcim/knokehelmes_preisumrechner/Preisumrechner.fxml
+++ b/src/main/resources/de/whs/mcim/knokehelmes_preisumrechner/Preisumrechner.fxml
@@ -16,12 +16,12 @@
       <Label fx:id="labLiterpreis" layoutX="45.0" layoutY="243.0" text="Preis pro l" />
       <Label fx:id="labFlaPreis" layoutX="45.0" layoutY="137.0" text="Flaschenpreis" />
       <Label fx:id="labFlaGroesse" layoutX="45.0" layoutY="45.0" text="Flaschengröße" />
-      <RadioButton layoutX="410.0" layoutY="96.0" mnemonicParsing="false" text="16%">
+      <RadioButton fx:id="radButMwst16" layoutX="410.0" layoutY="96.0" mnemonicParsing="false" text="16%">
          <toggleGroup>
             <ToggleGroup fx:id="Steuersatz" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="410.0" layoutY="78.0" mnemonicParsing="false" selected="true" text="19%" toggleGroup="$Steuersatz" />
+      <RadioButton fx:id="radButMwst19" layoutX="410.0" layoutY="78.0" mnemonicParsing="false" selected="true" text="19%" toggleGroup="$Steuersatz" />
       <TextField fx:id="FlaPreisNetto" layoutX="143.0" layoutY="133.0" prefHeight="25.0" prefWidth="100.0" />
       <ComboBox fx:id="FlaGroesseBox" layoutX="144.0" layoutY="41.0" prefHeight="25.0" prefWidth="100.0" promptText="1 l" />
       <TextField fx:id="LiterpreisNetto" editable="false" layoutX="142.0" layoutY="239.0" prefHeight="25.0" prefWidth="100.0" />
